# py-project-template

./: LICENSE  README.md  Taskfile.yml  pip.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
tests/: test_sample.py
