[tool.poetry]
name = "py-project-template"
version = "0.1.0"
description = "Use this project as a template for any python project you start"
authors = ["torbilote <norbert.lipinski96@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
# moto = "5.0.12"
# pydantic = "2.8.2"
# great-expectations = "0.18.19"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.6"
pytest = "8.3.2"
mypy = "1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
